amis/services/auth-proxy/envoy-proxy.yaml
stats_sinks:
  - name: envoy.stat_sinks.statsd
    typed_config:
        "@type": type.googleapis.com/envoy.config.metrics.v2.StatsdSink
        address:
            socket_address:
                address: 172.17.0.1
                port_value: 8125

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 7000

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          request_timeout: 3000s
          route_config:
            name: local_route
            virtual_hosts:
            - name: auth
              domains:
              - "auth.*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fk-auth
                  timeout: 3000s
          http_filters:
          - name: envoy.router
            typed_config: {}

  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          request_timeout: 3000s
          route_config:
            name: local_route
            virtual_hosts:
            - name: auth
              require_tls: EXTERNAL_ONLY
              domains:
              - "auth.*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fk-auth
                  timeout: 3000s
          http_filters:
          - name: envoy.router
            typed_config: {}

  clusters:
  - name: fk-auth
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: fk-auth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak
                port_value: 8080

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
